--- a/Debug_Stick_RP/manifest.json
+++ b/Debug_Stick_RP/manifest.json
@@ -1,23 +1,23 @@
 {
     "format_version": 2,
     "header": {
-        "min_engine_version": [1, 21, 60],
-        "name": "Debug Stick RP v2.0.0",
+        "min_engine_version": [1, 21, 110],
+        "name": "Debug Stick RP 1.1.0",
         "description": "pack.description",
         "uuid": "5ca1890c-7c15-4d71-811f-940438e9f3b8",
-        "version": [2, 0, 0]
+        "version": [1, 1, 0]
     },
     "modules": [
         {
             "type": "resources",
             "uuid": "be8ff489-4f32-442a-b60c-3ad5460b240c",
-            "version": [2, 0, 0]
+            "version": [1, 1, 0]
         }
     ],
     "dependencies": [
         {
             "uuid": "f4c1130d-fa11-47fd-9aab-14f95539744e",
-            "version": [2, 0, 0]
+            "version": [1, 1, 0]
         }
     ]
 }
