--- a/Debug_Stick_BP/manifest.json
+++ b/Debug_Stick_BP/manifest.json
@@ -2,27 +2,31 @@
     "format_version": 2,
     "header": {
         "min_engine_version": [1, 21, 110],
-        "name": "Debug Stick v1.1.0",
+        "name": "Debug Stick v1.1.1",
         "description": "pack.description",
         "uuid": "f4c1130d-fa11-47fd-9aab-14f95539744e",
-        "version": [2, 0, 0]
+        "version": [1, 1, 1]
     },
     "modules": [
         {
             "type": "script",
             "uuid": "57aa1b70-c8cb-42f9-b629-ea0fc68b9b71",
             "entry": "scripts/main.js",
-            "version": [1, 1, 0]
+            "version": [1, 1, 1]
         }
     ],
     "dependencies": [
         {
             "uuid": "5ca1890c-7c15-4d71-811f-940438e9f3b8",
-            "version": [1, 1, 0]
+            "version": [1, 1, 1]
         },
         {
             "module_name": "@minecraft/server",
             "version": "2.2.0"
+        },
+        {
+            "module_name": "@minecraft/server-ui",
+            "version": "2.0.0"
         }
     ]
 }
