--- a/Debug_Stick_BP/manifest.json
+++ b/Debug_Stick_BP/manifest.json
@@ -2,10 +2,10 @@
     "format_version": 2,
     "header": {
         "min_engine_version": [1, 21, 110],
-        "name": "Debug Stick v1.1.0b",
+        "name": "Debug Stick v1.1.1",
         "description": "pack.description",
         "uuid": "f4c1130d-fa11-47fd-9aab-14f95539744e",
-        "version": [1, 1, 0]
+        "version": [1, 1, 1]
     },
     "modules": [
         {
@@ -13,13 +13,13 @@
             "language": "Javascript",
             "entry": "scripts/main.js",
             "uuid": "57aa1b70-c8cb-42f9-b629-ea0fc68b9b71",
-            "version": [1, 1, 0]
+            "version": [1, 1, 1]
         }
     ],
     "dependencies": [
         {
             "uuid": "5ca1890c-7c15-4d71-811f-940438e9f3b8",
-            "version": [1, 1, 0]
+            "version": [1, 1, 1]
         },
         {
             "module_name": "@minecraft/server",
